--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ version: 0.2
 env:
   variables:
     PROJECT: WebApplication3
-    .DOTNET Core: 3.1
+    DOTNET_FRAMEWORK: 4.6.1
 phases:
   build:
     commands:
