--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,10 +1,14 @@
 version: 0.2
 
-
+env:
+  variables:
+    PROJECT: WebApplication3
+    DOTNET_FRAMEWORK: 4.6.1
 phases:
   build:
     commands:
-      - dotnet build /WebApplication3.sln
+      - nuget restore
+      - msbuild $env:PROJECT.csproj /p:TargetFrameworkVersion=v$env:DOTNET_FRAMEWORK /p:Configuration=Release /p:DeployIisAppPath="Default Web Site" /p:PackageAsSingleFile=false /p:OutDir=C:\codebuild\artifacts\ /t:Package
 artifacts:
   files:
     - '**/*'
